--- a/WebSite/StaticContent/app/scss/components/toolbar.scss
+++ b/WebSite/StaticContent/app/scss/components/toolbar.scss
@@ -1,8 +1,11 @@
 .toolbar {
-    background: gray;
-    position: relative;
+    background: #313131;
+    position: fixed;
+    width: 100%;
     height: 60px;
+    top: 0;
     transition: height 0.3s ease-in;
+    z-index: 5;
 
     &.opened-toolbar {
         height: 400px;
@@ -12,21 +15,17 @@
         .mobile-toolbar-body {
             .toolbar-links {
                 opacity: 0 !important;
+                visibility: hidden !important;
+                height: 0 !important;
             }
         }
-    }
-
-    .toolbar-container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
     }
 
     .toolbar-body {
         padding: 0 20px;
 
         .toolbar-links {
+            visibility: visible;
             .toolbar-link {
                 font-size: 18px;
                 color: white;
@@ -45,14 +44,18 @@
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
-                min-height: 60px;
+                height: 60px;
                 flex-wrap: wrap;
 
                 .toolbar-link {
-                    flex: 1 1 160px;
-                    display: flex;
-                    line-height: 18px;
+                    flex: 0 1 180px;
+                    line-height: 22px;
                     flex-wrap: nowrap;
+
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    display: inline-block;
 
                     .fa {
                         margin-right: 5px;
@@ -74,14 +77,18 @@
                 .menu-icon {
                     position: absolute;
                     top: 12px;
+                    color: white;
+                    cursor: pointer;
                 }
             }
 
             .toolbar-links {
-                transition: opacity 0.3s ease-in;
+                transition:visibility 0.2s linear, opacity 0.2s linear;
                 padding-left: 10px;
                 opacity: 1;
+                visibility: visible;
                 margin: 5px 0;
+                height: 100%;
 
                 .toolbar-link {
                     font-size: 26px;
